refactor JDKUtils